Fix nav items not showing at certain breakpoint

--- a/src/components/common/header/Header.module.scss
+++ b/src/components/common/header/Header.module.scss
@@ -73,7 +73,7 @@ a.title {
     align-items: center;
     gap: 1rem;
 
-    @include util.min-width(md) {
+    @include util.min-width(var.$mobile-boundary) {
       display: flex;
     }
   }
